--- a/page2.html
+++ b/page2.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Population:</h1>
-    <p>France</p>
-    <p>69 000 000</p>
+    <p class="pays">France</p>
+    <p class="population">69 000 000</p>
 </body>
     <a href="index.html">Retour page principale</a>
 </html>
